--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -46,6 +46,19 @@ In the figure below, for example, the difference $s_1 - s_2$ in the arclengths $
 \href{https://www.desmos.com/calculator/0vodc6gvp5}{Limacon Cylcoid Arclength 2B}
 
 
+The figure below makes the equality of arclengths plausible if you focus on the arcs with the same color at the same inclination angles.
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{4xn0xtuszi}{900}{600}   
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/4xn0xtuszi}{Cylcoid Trochoid Color}
+
+
+
+
 
 Trying to prove this more general result worked to our advantage as its shifted our focus from a global one (proving an equality of integrals) to  a local one (proving an equality of \emph{differential} arclengths). %This worked to our advantage.
 
@@ -67,8 +80,11 @@ It might seem counterintuitive that at any moment a rolling wheel is rotating no
 \item The velocity of $P$ is orthogonal to segment $\overline{PQ}$.
 \end{enumerate}
 
-The photograph of a rolling wheel below gives some sense of (a); points on the spokes farther from the point of contact are moving faster and the spokes blur....
+%The photograph of a rolling wheel below gives some sense of (a); points on the spokes farther from the point of contact are moving faster and the spokes blur....
 
+The figure below shows a cycloid, the curve traced by a fixed point $P$ on the circumference of a rolling wheel. The angle $\theta$ is the rotation angle of the wheel measured from an arbitrary starting point, in this case when $P$ coincides with $A$. Because of (b) above, the incination of the cycloid at $P$ (ie. the angle between the tangent and the horizontal) is equal to $\angle BQP$ (ie. the angle between the normal $\overline{PQ}$ and the vertical).
+
+The points on the cycloid are spaced at equal intervals of rotation and suggest that the speed of the tracing is proportional to its distance from the center of rotation.  
 
 \begin{onlineOnly}
     \begin{center}
