--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -1,9 +1,9 @@
 \documentclass{ximera}
-\title{Limacons and the Cycloid, Arclength}
+\title{An Arclength Theorem for Cycloids}
 
 \newcommand{\pskip}{\vskip 0.1 in}
 
-\newtheorem{theorem9}{Theorem}
+\newtheorem{theorem9}{The Arclength Theorem}
 
 \begin{document}
 \begin{abstract}
@@ -33,7 +33,7 @@ above the $x$-axis exceeds its length below by an amount equal to the length $8a
 
 The purpose of this note is to give a geometric proof of this fact and view some of Robinson's other observations in a broader context.
 
-Our first step in this direction was to look for a more general equality of arclengths by associating each point of the limacon above the $x$-axis with a point below. It seemed like the only choice was to pair points with same inclination angle and experiments with desmos suggested that the same equality of arclengths holds between any two inclination angles.
+Our first step in this direction was to look for a more general equality of arclengths by associating each point of the limacon above the $x$-axis with a point below. It seemed like the only choice was to pair points with same inclination angle (the angle a curve makes with the horizontal) and experiments with desmos suggested that the same equality of arclengths holds between any two inclination angles.
 
 In the figure below, for example, the difference $s_1 - s_2$ in the arclengths $A_1P_1$ and $A_2P_2$ in the limacon between indclination angles $0$ and $\phi$ equals the arclength $s_3$ of the cycloid between these same angles. 
 
@@ -46,7 +46,7 @@ In the figure below, for example, the difference $s_1 - s_2$ in the arclengths $
 \href{https://www.desmos.com/calculator/0vodc6gvp5}{Limacon Cylcoid Arclength 2B}
 
 
-The figure below makes the equality of arclengths plausible if you focus on the arcs with the same color at the same inclination angles.
+The figure below makes the equality of arclengths plausible if you focus on the short arcs of the same color between the same inclination angles.
 
 \begin{onlineOnly}
     \begin{center}
@@ -55,10 +55,6 @@ The figure below makes the equality of arclengths plausible if you focus on the 
 \end{onlineOnly}
 
 \href{https://www.desmos.com/calculator/4xn0xtuszi}{Cylcoid Trochoid Color}
-
-
-
-
 
 Trying to prove this more general result worked to our advantage as its shifted our focus from a global one (proving an equality of integrals) to  a local one (proving an equality of \emph{differential} arclengths). %This worked to our advantage.
 
@@ -72,7 +68,7 @@ s_1 - s_2 = s_3.
 Our proof of this theorem relies partly on the instantaneous center of rotation. Readers familiar with this idea should feel free to skip the next section and move directly to the proof.
 
 \section{Preliminaries}
-It might seem counterintuitive that at any moment a rolling wheel is rotating not about its axle but rather about its point of contact with the ground. This statement has two implications for a point $P$ at rest in the reference frame of the rolling wheel, like a pebble stuck in a tire.
+It might seem counterintuitive that at any moment a rolling wheel is rotating \emph{not} about its center but rather about its point of contact with the ground. This statement has two implications for a point $P$ at rest in the reference frame of a rolling wheel, like a pebble stuck in a tire.
 
 \begin{enumerate}
 \item The speed of $P$ is equal to the product $\rho \omega$ of the distance $PQ$ from $P$ to the point of contact and the rotation rate of the wheel.
@@ -82,9 +78,9 @@ It might seem counterintuitive that at any moment a rolling wheel is rotating no
 
 %The photograph of a rolling wheel below gives some sense of (a); points on the spokes farther from the point of contact are moving faster and the spokes blur....
 
-The figure below shows a cycloid, the curve traced by a fixed point $P$ on the circumference of a rolling wheel. The angle $\theta$ is the rotation angle of the wheel measured from an arbitrary starting point, in this case when $P$ coincides with $A$. Because of (b) above, the incination of the cycloid at $P$ (ie. the angle between the tangent and the horizontal) is equal to $\angle BQP$ (ie. the angle between the normal $\overline{PQ}$ and the vertical).
+The figure below shows a cycloid, the curve traced by a point $P$ fixed on the circumference of a rolling wheel. The marked angle $\theta$ is the wheel's angle of rotation measured from an arbitrary starting point, in this case when $\overline{QP}$ is vertical and $P$ coincides with $A$. Because of (b) above, the incination of the cycloid at $P$ (ie. the angle between the tangent and the horizontal) is equal to the measure of $\angle BQP$ (ie. the angle between the normal $\overline{PQ}$ and the vertical).
 
-The points on the cycloid are spaced at equal intervals of rotation and suggest that the speed of the tracing is proportional to its distance from the center of rotation.  
+The points on the cycloid are spaced at equal intervals of rotation and suggest that the speed $v= \rho (d\theta/dt)$ of the tracing point is proportional to its distance from the center of rotation.  
 
 \begin{onlineOnly}
     \begin{center}
@@ -94,6 +90,25 @@ The points on the cycloid are spaced at equal intervals of rotation and suggest 
 
 \href{https://www.desmos.com/calculator/ilinb0qn7q}{Center of Rotation}
 
+For our proof of Theorem 1, it will be helpful to think differentially instead of dynamically. Then (a) is equivalent to saying that as the wheel turns through the differential angle $d\theta>0$, the tracing point traverses the differential distance $ds = \rho \, d\theta$. 
+
+For the cycloid above, for example, generated by a circle of radius $a$,
+\begin{align*}
+     ds = &\rho \, d\theta \\
+             &= 2a \cos\phi\, d\theta \\
+              &= 2a \cos(\theta/2)\, d\theta .  
+\end{align*}
+
+{\bf Remark:} Integrating these differential arclengths shows the length of the cycloid from $A$ to $P$ is
+\[
+       s = 4a\sin(\theta/2) = 4a \sin\phi %2 \text BP .
+\]
+and equal to twice the chord length $c = BP$.
+
+My favorite way to prove this equality is by comparing the differential arclength $ds = 2a\cos\phi\, d\theta$ traversed by $P$ with the differential change $dc$ in the distance $BP$. In the reference frame of the rolling circle where $P$ is at rest, $B$ traverses the differential arclength $a\, d\theta$ as the circle turns through the angle $d\theta$. But since $B$ moves horizontally away from $P$ along a path inclined at the angle $\phi$ to $\overrightarrow{PB}$ (and not directly away from $P$), 
+\[
+    dc = (a\, d\theta) \cos \phi = ds/2.
+\]
 
 
 
@@ -102,7 +117,9 @@ The points on the cycloid are spaced at equal intervals of rotation and suggest 
 \section{A Proof of Theorem 1}
 
 \begin{proof}
-In proving Theorem 1, it helps to imagine three circles rolling along the $x$-axis as the points $P_i$, $i=1,2,3$ at rest in the reference frames of these circles sweep out the upper limacon, lower limacon, and cycloid. The circles start with the points $P_i$ at the same inclination angle $\phi=0$ and the segments $Q_iP_i$ vertical. And as illustrated in Figure 3, the segments $\overline{Q_iP_i}$ from the centers of rotation to the tracing points remain parallel.
+To prove Theorem 1, imagine three circles rolling along the $x$-axis as the points $P_i$, $i=1,2,3$ at rest in the reference frames of these circles respectively sweep out the upper limacon, lower limacon, and cycloid.  We supposel also as illustrated in Figure 3, that the segments $\overline{Q_iP_i}$ from the centers of rotation to the tracing points remain parallel at all times.
+
+%We suppose the circles start with the points $P_i$ at the same inclination angle $\phi=0$ and the segments $Q_iP_i$ vertical. And we also assume as illustrated in Figure 3, the segments $\overline{Q_iP_i}$ from the centers of rotation to the tracing points remain parallel at all times.
 
 Our goal is to show
 \begin{equation} \label{Eq:DiffArcs}
@@ -131,11 +148,18 @@ and
 \]
 from the respective centers of rotation $Q_1$, $Q_2$, $Q_3$ of the circles.
 
-The equality of distances
+Then
 \[
    \rho_1 - \rho_2 = \rho_3 ,
 \]
-does \emph{not} implie the equality of differential arclengths (\ref{Eq:DiffArcs}) because the circles turn through unequal differential angles $d\theta_i$ in sweeping out the arcs. %We can see this globally since in sweeping out the full curves (upper limacon, lower limacon, and cycloid) the circles turn through the unequal angles
+but because the circles turn through unequal differential angles $d\theta_i$ in sweeping out the arclengths $ds_i$, this equality does \emph{not} directly imply the equality of differential arclengths (\ref{Eq:DiffArcs}). We need to know more to show (\ref{Eq:DiffArc}), which we write now in the form
+\[
+       \rho_1 \, d\theta_1 - \rho_2 \, d\theta_2 = \rho_3 \, d\theta_3 .
+\]
+
+
+
+%because the circles turn through unequal differential angles $d\theta_i$ in sweeping out the arcs. %We can see this globally since in sweeping out the full curves (upper limacon, lower limacon, and cycloid) the circles turn through the unequal angles
 %\[
  %     (\Delta \theta_1 = 2\pi) > (\Delta \theta_1 = 2\arccos(-a/b)) > (\Delta \theta_3 = 2\pi - 2\arccos(-a/b) ) . 
 %\]
@@ -143,10 +167,10 @@ does \emph{not} implie the equality of differential arclengths (\ref{Eq:DiffArcs
 %\[
  %     (\Delta \theta_1 = 2\pi) > (\Delta \theta_1 = 2\arccos(-a/b)) > (\Delta \theta_3 = 2\pi - 2\arccos(-a/b) ) . 
 %\]
-So we need to find some relationship among these differential arclengths to show the equality (\ref{Eq:DiffArc}), which we write now in the form
-\[
-       \rho_1 \, d\theta_1 - \rho_2 \, d\theta_2 = \rho_3 \, d\theta_3 .
-\]
+%So we need to find some relationship among these differential arclengths to show the equality (\ref{Eq:DiffArc}), which we write now in the form
+%\[
+%       \rho_1 \, d\theta_1 - \rho_2 \, d\theta_2 = \rho_3 \, d\theta_3 .
+%\]
 
 
 
@@ -159,16 +183,16 @@ So we need to find some relationship among these differential arclengths to show
 
 %We regard the corresponding arclengths $s_1$, $s_2$, $s_3$ and rotation angles $\theta_i$ as functions of the common inclination angle $\phi$ of the curves at $P_1$, $P_2$, and $P_3$. Our aim is to relate the differential arclengths $ds_i$ and the differential angles of rotation $\theta_i$ to the differential change $d\phi$ in the inclination angle.
 
-It turns out that we just need  two facts:
+Just two additional facts suffice:   %It turns out that we just need  two facts:
 \begin{enumerate}
 % \item $ds_i = \rho_i \, d\theta_i$ ,
 
-\item $\theta_1 + \theta_2 = \theta_3$ (where the rotation angles are measured from the , and
+\item $\theta_1 + \theta_2 = \theta_3$, where the rotation angles $\theta_1$ and $\theta_3$ are measured from the upward vertical, $\theta_2$ from the downward vertical as illustrated above, and %the rotation angles are measured from the vertical,  as indicated above) , and
 
 \item $\frac{d\theta_1}{d\theta_2} = \frac{\rho_1}{\rho_2}$.
 \end{enumerate}
 
-These are enough to prove Theorem 1. For then
+Assuming these for the moment, then %These are enough to prove Theorem 1. For then
 \begin{align*}
      ds_1 - ds_2 &= \rho_1 \, d\theta_1 - \rho_2 \, d\theta_2 \\
                        &= (\rho_3 + \rho_2) \, d\theta_1 - (\rho_1 - \rho_3)\, d\theta_2 \\
@@ -177,9 +201,9 @@ These are enough to prove Theorem 1. For then
                        &= ds_3 .
 \end{align*}
 
-The proof of (a) follows from the composite figure below (note $\theta_2$ is measured from the downward vertical). The key point is that since $S_1P_1 = Q_1R_1 = \rho_2$, $\Delta C_1S_1P_1\cong \Delta C_1Q_1R_1$. Therefore, the marked angle $\angle P_1C_1S_1$ has measure $\theta_2$ and 
+The proof of (a) follows from the figure below. The key point is that since $\overline{S_1P_1}\cong \overline{Q_1R_1}$, $\Delta C_1S_1P_1\cong \Delta C_1Q_1R_1$. Therefore, $m\angle P_1C_1S_1 = \theta_2$ and 
 \[
- \theta_3 = \angle B_1C_1P_1 = \theta_1 + \theta_2.
+ \theta_3 = m \angle B_1C_1S_1 = \theta_1 + \theta_2.
 \]
 
 
@@ -191,32 +215,46 @@ The proof of (a) follows from the composite figure below (note $\theta_2$ is mea
 
 \href{https://www.desmos.com/calculator/txbihum5r3}{Cylcoids Proof of Theorem 1}
 
-To prove (b), we could use the law of sines ...
-
+To prove (b), we borrow an idea from Tabachnikov's \emph{Geometry and Billiards} and consider the differential changes $b\, d\theta_i$, $i = 1,2$  in the respective arclengths $b\theta_i$ as the the chord $\overline{P_1R_1}$ turns through the differential angle $d\phi$.  
 
 \begin{onlineOnly}
     \begin{center}
-\desmos{xvwr9mhuvw}{900}{600}   
+\desmos{i2050p22ud}{900}{600}      %xvwr9mhuvw
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/xvwr9mhuvw}{Cylcoids Proof of Theorem 1B}
+\href{https://www.desmos.com/calculator/i2050p22ud}{Cylcoids Proof of Theorem 1BB}
 
+i2050p22ud
 
+In the figure above, the differential arclengths $ZP_1^\prime$ and $WR_1^\prime$ (circular arcs centered at $Q_1$) have lengths
+\[
+    ZP_1^\prime = \rho_1 \, d\phi
+\]
+and
+\[
+  WR_1^\prime =  \rho_1 \, d\phi.
+\]
+
+But since the differential right triangles $\Delta P_1ZP_1^\prime$ and $\Delta R_1 W R_1^\prime$ are similar,
+\[
+      \frac{P_1P_1^\prime}{R_1 R_1^\prime}  =  \frac{ZP_1^\prime}{WR_1^\prime} .
+\]
+So
+\[
+    \frac{b\, d\theta_1}{b \, d\theta_2} = \frac{ \rho_1 \, d\phi}{ \rho_2 \, d\phi}
+\]
+and (b) follows.
  
-Then it suffices to show that as the inclination angle  the circles 
-
-point is that the differential motion 
-
-As a circle ${\cal C}$ of radius $a$ rolls along the $x$-axis, a fixed point in the reference frame of ${\cal C}$ that is $b>a$ units from ${\cal C}$'s center sweeps out the limacon of Figure 1.
+%As a circle ${\cal C}$ of radius $a$ rolls along the $x$-axis, a fixed point in the reference frame of ${\cal C}$ that is $b>a$ units from ${\cal C}$'s center sweeps out the limacon of Figure 1.
  
-A fixed point \emph{on} the same circle of radius $a$ traces the cycloid in Figure 1.
+%A fixed point \emph{on} the same circle of radius $a$ traces the cycloid in Figure 1.
 
-Let $s_1$ be the arclength $A_1P_1$ of the limacon above the $x$-axis between inclination angles $0$ and $\phi$. Let $s_2$ be the arclength $A_2P_2$ of the limacon below the axis between the same inclination angles. And let $s_3$ be the arclength $A_3P_3$ of the cycoid between these inclination angles.
+%Let $s_1$ be the arclength $A_1P_1$ of the limacon above the $x$-axis between inclination angles $0$ and $\phi$. Let $s_2$ be the arclength $A_2P_2$ of the limacon below the axis between the same inclination angles. And let $s_3$ be the arclength $A_3P_3$ of the cycoid between these inclination angles.
 
 
 
-Imagine three copies of ${\cal C}$ rolling along the $x$-axis as illustrated below.
+%Imagine three copies of ${\cal C}$ rolling along the $x$-axis as illustrated below.
 
 \end{proof}
 
