--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -33,7 +33,7 @@ above the $x$-axis exceeds its length below by an amount equal to the length $8a
 
 The purpose of this note is to give a geometric proof of this fact and view some of Robinson's other observations in a broader context.
 
-Our first step in this direction was to look for a more general equality of arclengths by associating each point of the limacon above the $x$-axis with a point below. It seemed like the only choice was to pair points with same inclination angle (the angle a curve makes with the horizontal) and experiments with desmos suggested that the same equality of arclengths holds between any two inclination angles.
+Our first step in this direction is to look for a more general equality of arclengths by associating each point of the limacon above the $x$-axis with a point below. It seems like the only choice was to pair points with same inclination angle (the angle a curve makes with the horizontal) and experiments with desmos suggest that the same equality of arclengths holds between any two inclination angles.
 
 In the figure below, for example, the difference $s_1 - s_2$ in the arclengths $A_1P_1$ and $A_2P_2$ in the limacon between indclination angles $0$ and $\phi$ equals the arclength $s_3$ of the cycloid between these same angles. 
 
@@ -56,7 +56,7 @@ The figure below makes the equality of arclengths plausible if you focus on the 
 
 \href{https://www.desmos.com/calculator/4xn0xtuszi}{Cylcoid Trochoid Color}
 
-Trying to prove this more general result worked to our advantage as its shifted our focus from a global one (proving an equality of integrals) to  a local one (proving an equality of \emph{differential} arclengths). %This worked to our advantage.
+Trying to prove this more general result works to our advantage as its shifts our focus from a global one (proving an equality of integrals) to  a local one (proving an equality of \emph{differential} arclengths). %This worked to our advantage.
 
 \begin{theorem9}
 With $s_1$, $s_2$ the respective arclengths of the limacon (\ref{Eq:Limacon}) above and below the $x$-axis between inclination angles $0$, and $\phi$ and $s_3$ the arclength of the cycloid (\ref{Eq:Cycloid}) between these same angles,
@@ -245,16 +245,7 @@ gives another interpretation of the Arclength theorem as a relationship
 \]
 among the radii of curvature at the same inclination angle.
 
-\section{Limacons}
 
-
-\begin{onlineOnly}
-    \begin{center}
-\desmos{kuhagddz3r}{900}{600}
-\end{center}
-\end{onlineOnly}
-
-\href{https://www.desmos.com/calculator/kuhagddz3r}{Wrapping Cycloids around Circles Limacon}
 
 
 
@@ -268,6 +259,31 @@ A classic problem asks how many rotations one quarter makes as it rolls once aro
 \end{onlineOnly}
 
 \href{https://www.desmos.com/calculator/rhsrqsslsp}{Rolling Quarter}
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{1ytu553qtf}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/1ytu553qtf}{Rolling Quarter and Cardioid}
+
+
+
+
+\section{Limacons}
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{kuhagddz3r}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/kuhagddz3r}{Wrapping Cycloids around Circles Limacon}
+
+
+
 
 
 
